add features page

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -13,6 +13,7 @@
     <div class="navbar-menu" [class.active]="isMenuOpen">
       <a routerLink="/home" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" (click)="closeMenu()">Home</a>
       <a routerLink="/services" routerLinkActive="active" (click)="closeMenu()">Services</a>
+      <a routerLink="/features" routerLinkActive="active" (click)="closeMenu()">Features</a>
       <a routerLink="/about" routerLinkActive="active" (click)="closeMenu()">About</a>
       <a routerLink="/contact" routerLinkActive="active" (click)="closeMenu()">Contact</a>
     </div>
